--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ button:hover{
     width: 70%;
     border-radius: 4px;
     background-image: linear-gradient(to right,#ec008c,#fc6767);
-    border:#d10069 1px solid;
+    border:#e4b127 1px solid;
     padding: 3%;
     margin: 0.2em 0;
     color: #f5f5f5;
@@ -169,6 +169,5 @@ button:hover{
 /* Graph Display */
 
 /*
-2 : Add ripple effect https://youtu.be/ueyRcYEmsrI
-3 : Adding Moving Block
+1 : Adding Moving Block
 */
