--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*Direct Elements*/
-
 html{
     margin: 0;
     padding: 0;
@@ -22,19 +20,16 @@ canvas{
 button{
     outline: none;
     border-radius: 0.7em;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     background-color: transparent;
     cursor: pointer;
-    padding: 0.8em 0.7em;
+    padding: 0.5em 0.4em;
     font-weight: 600;
 }
 
 button:hover{
-    border-color: #fff3;
     transition: all 200ms ease;
 }
-
-/*Id's and Classes*/
 
 .tools-wrapper{
     background-image: linear-gradient(to bottom right, #7c8288,#1a2027);
@@ -48,7 +43,7 @@ button:hover{
     border: 2px solid rgb(167, 167, 167);
     border-radius: 1.5%;
     text-align: center;
-    margin: 0.8rem 0.6rem;
+    margin: 1rem 0.6rem;
     padding: 0.3em 0.3em;
 }
 
@@ -73,9 +68,9 @@ button:hover{
     grid-area: 1/1 / span 1/-1;
     border-bottom: #000 4px solid;
     border-radius: 3px;
-    font-size: 3em;
+    font-size: 2.8em;
     color: #fff93c;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.6px;
     margin: 0.3rem 0;
     padding-bottom: 0.1em;
 }
@@ -130,7 +125,7 @@ button:hover{
 
 #travsHeading{
     font-size: 2.8em;
-    letter-spacing: 0.6px;
+    letter-spacing: 0.8px;
     margin: 0.2em;
     padding: 0.2em 0;
     color: #fff942;
@@ -143,8 +138,8 @@ button:hover{
     display: flex;
     justify-content: space-around;
     border-radius: 4px;
-    background-color: rgb(77, 253, 224);
-    border: 1px solid;
+    background-color: rgb(82, 199, 180);
+    border: 2px solid transparent;
     margin: 1.5em 0.1em;
     padding: 0.2em;
     font-size: 1.2em;
@@ -155,16 +150,17 @@ button:hover{
 #visualizeBtn{
     width: 70%;
     border-radius: 4px;
-    background-image: linear-gradient(to right,#ec008c,#fc6767);
-    border:#e4b127 1px solid;
+    background-image: linear-gradient(to right,#cc017b,#fa5353);
     padding: 3%;
-    margin: 0.2em 0;
+    margin: 0.3em 0;
     color: #f5f5f5;
     letter-spacing: 1px;
     font-size: 1.8em;
     cursor: pointer;
     overflow: hidden;
 }
+
+
 
 /* Graph Display */
 
