--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html{
     margin: 0;
     padding: 0;
     font-family: 'Oxygen', sans-serif;
+    font-weight: 600;
 }
 
 body{
@@ -31,9 +32,21 @@ button:hover{
     transition: all 200ms ease;
 }
 
+.message{
+    padding: 0.2em;
+    margin: 0.4em;
+    margin-bottom: 0;
+    font-size: 1.4rem;
+    text-align: center;
+    border: #137685 3px solid;
+    background-color: #1db9d1;
+    border-radius: 3px;
+}
+
 .tools-wrapper{
     background-image: linear-gradient(to bottom right, #7c8288,#1a2027);
     width: auto;
+    margin-bottom: 0;
 }
 
 .items{
@@ -138,7 +151,7 @@ button:hover{
     display: flex;
     justify-content: space-around;
     border-radius: 4px;
-    background-color: rgb(82, 199, 180);
+    background-color: #3f9cff;
     border: 2px solid transparent;
     margin: 1.5em 0.1em;
     padding: 0.2em;
