--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html{
     padding: 0;
     font-family: 'Oxygen', sans-serif;
     font-weight: 600;
+    overflow-x: hidden;
 }
 
 body{
@@ -35,21 +36,23 @@ button:hover{
 .message{
     display: grid;
     padding: 0.2em;
-    margin: 0.4em;
-    margin-bottom: 0;
+    margin: 0.3em;
+    font-weight: 600;
     font-size: 1.5rem;
-    border: #24a1b5 3px solid;
-    background-image: linear-gradient(to bottom right,#80bfc9,#d3eaee);
+    border: #0b515c 3px solid;
+    background-color: #117a8b;
+    color: white;
     border-radius: 5px;
     height: 10%;
+    letter-spacing: 0.5px;
     align-items: center;
-    justify-content: center;
+    text-align: center;
 }
 
 .tools-wrapper{
     background-image: linear-gradient(to bottom right, #7c8288,#1a2027);
-    width: auto;
-    margin-bottom: 0;
+    width: min-content;
+    margin: 0;
 }
 
 .items{
@@ -59,7 +62,7 @@ button:hover{
     border: 2px solid rgb(167, 167, 167);
     border-radius: 1.5%;
     text-align: center;
-    margin: 1rem 0.6rem 0 0.6rem;
+    margin: 1.1rem 0.6rem 0 0.6rem;
     padding: 0.3em 0.3em;
 }
 
@@ -77,7 +80,6 @@ button:hover{
     align-items: center;
     padding: 0 0.2em;   
     justify-content: center;
-    grid-column-gap: 0.5rem;
 }
 
 #toolsHeading{
@@ -85,14 +87,14 @@ button:hover{
     border-bottom: #000 4px solid;
     border-radius: 3px;
     font-size: 2.8em;
-    color: #fff93c;
+    color: #fff942;
     letter-spacing: 0.6px;
     margin: 0.3rem 0;
     padding-bottom: 0.1em;
 }
 
 .itemsInput{
-    width: 8rem;
+    width: 7rem;
     height: 2.5rem;
     margin: 0 3% 0 3%;
     border-radius: 5px;
@@ -141,7 +143,7 @@ button:hover{
 
 #travsHeading{
     font-size: 2.8em;
-    letter-spacing: 0.8px;
+    letter-spacing: 1px;
     margin: 0.2em;
     padding: 0.2em 0;
     color: #fff942;
@@ -154,24 +156,11 @@ button:hover{
     display: flex;
     justify-content: space-around;
     border-radius: 4px;
-    background-color: #3f9cff;
-    border: 2px solid transparent;
+    background-image: linear-gradient(to right bottom ,#f953cc,#d12b87);
+    border: 2px solid #921259;
     margin: 1.5em 0.1em;
-    padding: 0.2em;
-    font-size: 1.2em;
+    padding: 0.5em 0;
+    font-size: 1.2rem;
     font-weight: 600;
     cursor: pointer;
-}
-
-#visualizeBtn{
-    width: 70%;
-    border-radius: 4px;
-    background-image: linear-gradient(to right,#cc017b,#fa5353);
-    padding: 3%;
-    margin: 0.3em 0;
-    color: #f5f5f5;
-    letter-spacing: 1px;
-    font-size: 1.8em;
-    cursor: pointer;
-    overflow: hidden;
 }
